  * Add upstream Rev. 2858:
    - DISPO_SEND_EMAIL.txt: Update the last changes.
  * Wall_js.php:  Add missing argument 5 for user_authorization().
  * New tools directory (2017-056).
  * New directory license, contain all license texts (2017-057).
  * New DB-Schema 1528:
    - Add max_inbound_calls_outcome to vicidial_campaigns.
    - Add manual_auto_next_options to vicidial_campaigns.
    - Add office_num_phone_code,
          cell_num_phone_code,
          other_num1_phone_code,
          other_num2_phone_code to contact_information;
  * Add upstream Rev. 2859:
    - agi-VDAD_ALL_inbound.agi,
      vdc_db_query.php,
      vicidial.php,
      admin.php,
      help.php,
      UPGRADE: Added max_inbound_calls_outcome options.
  * Add upstream Rev. 2860:
    - vicidial.php,
      admin.php,
      help.php,
      UPGRADE: Added manual_auto_next_options options.
  * Add upstream Rev. 2861:
    - vdc_db_query.php,
      vdc_email_display.php,
      vdc_script_display.php,
      vicidial.php,
      admin.php,
      help.php,
      UPGRADE: Added ability to display inbound email messages in Script tab
        scripts.
  * Add upstream Rev. 2862:
    - New dispo_change_status.php: Allow changing of a lead's status to a
        different status after it has been dispositioned as a specified 
        status a set number of times.
  * Add phone_code to phonebook (2017-058):
    - Add new fields to contact_information.
    - admin.php: Add fields Phone Code.
    - vdc_phonebook_display.php: Add code for Phone Code.
  * Add upstream Rev. 2863:
    - non_agent_api.php: Fixed issue with duplicate custom fields.
  * Add upstream Rev. 2864:
    - functions.php: Fixed issue with duplicate custom fields.
  * Add upstream Rev. 2865:
    - vdc_db_query.php,
    - vicidial.php,
    - admin.php,
    - help.php,
    - UPGRADE: Added agent_screen_time_display option.

2.25.20
  [Jörg Frings-Fürst]
  * help.php: add missing '<'.
  * New DB-Schema 1527: (2017-054)