@@ -1,0 +1,5 @@
+<?php
+
+$mail_to = "jff@flyingpenguin.de";
+
+?>
